<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_question_text">Question: 44/225</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="nxt_button">Next</string>
    <string name="question_text_plchold">This is where the questions are</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="random_but_text">"Random "</string>
    <string name="reset_button_text">RESET</string>
    <string name="current_score">Score_placeholder</string>
</resources>